--- a/backend/package.json
+++ b/backend/package.json
@@ -11,9 +11,14 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@google/generative-ai": "^0.24.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.9",
+    "pdf-parse": "^1.1.1",
+    "pg": "^8.14.1",
+    "router": "^1.3.8"
   }
 }
